second exercise complete

--- a/kennethhowell/kenneth-howelljscalc.html
+++ b/kennethhowell/kenneth-howelljscalc.html
@@ -50,6 +50,6 @@
         <button class="sign" value="/">/</button>
 </div>
 
-<script src="kenneth-howell-js.js"></script>
+<script src="kenneth-howell-jscalc.js"></script>
 </body>
 </html>
