--- a/melinda-greene.html
+++ b/melinda-greene.html
@@ -6,6 +6,96 @@
 
 
 </head>
+
+<style>
+
+    #star-five {
+        margin: 50px 0;
+        position: relative;
+        /*display: block;*/
+        color: red;
+        width: 0px;
+        height: 0px;
+        display: inline-block;
+        border-right: 100px solid transparent;
+        border-bottom: 70px solid red;
+        border-left: 100px solid transparent;
+        transform: rotate(35deg);
+    }
+    #star-five:before {
+        border-bottom: 80px solid red;
+        border-left: 30px solid transparent;
+        border-right: 30px solid transparent;
+        position: absolute;
+        height: 0;
+        width: 0;
+        top: -45px;
+        left: -65px;
+        display: block;
+        content: '';
+        transform: rotate(-35deg);
+    }
+    #star-five:after {
+        position: absolute;
+        display: block;
+        color: red;
+        top: 3px;
+        left: -105px;
+        width: 0px;
+        height: 0px;
+        border-right: 100px solid transparent;
+        border-bottom: 70px solid red;
+        border-left: 100px solid transparent;
+        transform: rotate(-70deg);
+        content: '';
+    }
+
+
+    #star1 {
+        margin: 50px 0;
+        position: relative;
+        display: block;
+        color: red;
+        width: 0px;
+        height: 0px;
+        border-right: 100px solid transparent;
+        border-bottom: 70px solid red;
+        border-left: 100px solid transparent;
+        transform: rotate(35deg);
+    }
+    #star1:before {
+        border-bottom: 80px solid red;
+        border-left: 30px solid transparent;
+        border-right: 30px solid transparent;
+        position: absolute;
+        height: 0;
+        width: 0;
+        top: -45px;
+        left: -65px;
+        display: block;
+        content: '';
+        transform: rotate(-35deg);
+    }
+    #star1:after {
+        position: absolute;
+        display: block;
+        color: red;
+        top: 3px;
+        left: -105px;
+        width: 0px;
+        height: 0px;
+        border-right: 100px solid transparent;
+        border-bottom: 70px solid red;
+        border-left: 100px solid transparent;
+        transform: rotate(-70deg);
+        content: '';
+    }
+
+
+
+
+
+</style>
 <body>
 
 
@@ -19,6 +109,18 @@
 
 
 
-<script src="melinda-greene.js"></script>
+<div id="star-five" class="ui-widget-content">
+    <p>Drag me to my target</p>
+</div>
+
+<div id="star1" class="ui-widget-header">
+    <p>Drop here</p>
+</div>
+
+
+
+
+<script src="jquery-2.2.4.js"></script>
+<script src="MelindaNewNew.js"></script>
 </body>
 </html>
